--- a/coinstac-decentralized-algorithm-integration/index.html
+++ b/coinstac-decentralized-algorithm-integration/index.html
@@ -23,7 +23,7 @@
 <label for="nav-trigger" class="overlay"></label>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Global</h3><ul><li><a href="global.html#doFilewiseComputation">doFilewiseComputation</a></li><li><a href="global.html#exitIfComplete">exitIfComplete</a></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Global</h3><ul><li><a href="global.html#doFilewiseComputation">doFilewiseComputation</a></li><li><a href="global.html#exitIfComplete">exitIfComplete</a></li><li><a href="global.html#inputs">inputs</a></li></ul>
 </nav>
 
 <div id="main">
