--- a/coinstac-simulator/module-simulator.html
+++ b/coinstac-simulator/module-simulator.html
@@ -23,7 +23,8 @@
 <label for="nav-trigger" class="overlay"></label>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-simulator.html">simulator</a></li><li><a href="module-src_boot-locals.html">src/boot-locals</a></li></ul><h3>Global</h3><ul><li><a href="global.html#createUserData">createUserData</a></li><li><a href="global.html#formatter">formatter</a></li><li><a href="global.html#getChildProcessLogger">getChildProcessLogger</a></li><li><a href="global.html#getReadyLocalProcess">getReadyLocalProcess</a></li><li><a href="global.html#getStdDataHandler">getStdDataHandler</a></li><li><a href="global.html#loadFiles">loadFiles</a></li><li><a href="global.html#run">run</a></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="Get%2520an%2520object%2520that%2520behaves%2520like%2520%2560ComputationRegistry%2560%2520but%2520contains%2520a%2520stubbed%250Acomputation%2520via%2520the%2520%2560computationPath%2560%2520paramter.module_.html">Get an object that behaves like `ComputationRegistry` but contains a stubbed
+computation via the `computationPath` paramter.</a></li><li><a href="module-simulator.html">simulator</a></li><li><a href="module-src_boot-locals.html">src/boot-locals</a></li></ul><h3>Global</h3><ul><li><a href="global.html#createUserData">createUserData</a></li><li><a href="global.html#formatter">formatter</a></li><li><a href="global.html#getChildProcessLogger">getChildProcessLogger</a></li><li><a href="global.html#getReadyLocalProcess">getReadyLocalProcess</a></li><li><a href="global.html#getStdDataHandler">getStdDataHandler</a></li><li><a href="global.html#loadFiles">loadFiles</a></li><li><a href="global.html#run">run</a></li></ul>
 </nav>
 
 <div id="main">
@@ -230,7 +231,7 @@
     
     <dt class="tag-source">Source:</dt>
     <dd class="tag-source"><ul class="dummy"><li>
-        <a href="index.js.html">index.js</a>, <a href="index.js.html#line30">line 30</a>
+        <a href="src_index.js.html">src/index.js</a>, <a href="src_index.js.html#line29">line 29</a>
     </li></ul></dd>
     
 
