--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <p><img src="https://raw.githubusercontent.com/MRN-Code/coinstac/master/img/coinstac.png" height="75px"></p>
 <p><a href="https://app.codeship.com/projects/185577"> <img src="https://app.codeship.com/projects/9a9dd9b0-8f5a-0134-c5bf-0e20509a962c/status?branch=master" alt="Codeship Status for MRN-Code/coinstac"></a></p>
 <p><em>Collaborative Informatics and Neuroimaging Suite Toolkit for Anonymous Computation, User Interface.</em> A research project by your friends <a href="http://www.mrn.org/">The Mind Research Network</a>.</p>
+<p>📖 Read the project’s paper, <a href="http://journal.frontiersin.org/article/10.3389/fnins.2016.00365/full"><em>COINSTAC: A Privacy Enabled Model and Prototype for Leveraging and Processing Decentralized Brain Imaging Data</em> on Frontiers in Neuroscience</a></p>
 <p>COINSTAC is software to foster collaborative research, removing large barriers to traditional data-centric collaboration approaches.  It enables groups of users to run common analyses <em>on their own machines</em> over <em>their own datasets</em> with ease.  The results of these analyses are synchronized to the cloud, and undergo aggregate analyses processes using all contributor data.  Decentralized pipelines allow for distributed, iterative, and feature rich analyses to be run, opening new and exciting capabilities for collaborative computation.  If also offers data anonymity through differential privacy algorithms, so members do not need to fear PHI traceback.</p>
 <p>Let&#39;s do research!</p>
 <p><strong>Table of Contents:</strong></p>
